--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "timeengine",
-  "version": "5.0.2",
+  "version": "5.0.3",
   "description": "TimeEngine is a tiny, simple yet versatile JavaScript library of event system. Built for Declarative and Functional Reactive Programming.",
   "main": "timeengine.js",
   "scripts": {
@@ -36,7 +36,7 @@
     "eslint": "^1.10.3",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
-    "timeengine-react": "^1.1.1"
+    "timeengine-react": "*"
   },
   "dependencies": {
     "immutable": "^3.7.6"
