--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "timeengine",
-  "version": "5.1.2",
-  "description": "TimeEngine is a tiny, simple yet versatile JavaScript library of event system. Built for Declarative and Functional Reactive Programming.",
+  "version": "5.1.3",
+  "description": "TimeEngine is a tiny, simple yet versatile library that provides first class reactive components with smart dependency resolving capability in JavaScript. Built for a new programming paradigm: Dependency driven Functional Reactive Programming (DFRP).",
   "main": "timeengine.js",
   "scripts": {
     "test": "babel timeengine.es -o timeengine.js; babel-node test.js",
