--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "eslint": "^1.10.3",
+    "eslint-plugin-react": "^3.15.0",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
     "timeengine-react": "*"
