--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "timeengine",
-  "version": "6.2.0",
-  "description": "TimeEngine is a tiny, simple yet versatile library that provides first class reactive components with smart dependency resolving capability in JavaScript. Built for a new programming paradigm: Dependency driven Functional Reactive Programming (DFRP).",
+  "version": "6.2.1",
+  "description": "TimeEngine is a tiny, simple yet versatile library that provides first class reactive value 'over time' with smart dependency resolving capability in JavaScript. Built for a new programming paradigm: Dependency driven Functional Reactive Programming (DFRP).",
   "main": "timeengine.js",
   "scripts": {
     "test": "babel timeengine.es -o timeengine.js; babel-node test.js",
