--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "timeengine",
-  "version": "6.2.4",
+  "version": "6.5.0",
   "description": "TimeEngine is a tiny, simple yet versatile library that provides first class reactive value 'over time' with smart dependency resolving capability in JavaScript. Built for a programming paradigm: Dependency driven Functional Reactive Programming (DFRP)",
   "main": "timeengine.js",
   "scripts": {
-    "test": "babel timeengine.es -o timeengine.js; babel-node test.js",
+    "test": "node test.js",
     "jsx": "./node_modules/.bin/babel ./react-test/index.jsx -o ./react-test/index.js"
   },
   "repository": {
@@ -30,13 +30,13 @@
   },
   "homepage": "http://timeengine.github.io",
   "devDependencies": {
-    "babel-cli": "^6.4.0",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
-    "eslint": "^1.10.3",
-    "eslint-plugin-react": "^3.15.0",
-    "react": "^0.14.6",
-    "react-dom": "^0.14.6",
+    "babel-cli": "^6.9.0",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
+    "eslint": "^2.10.2",
+    "eslint-plugin-react": "^5.1.1",
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0",
     "timeengine-react": "*"
   },
   "dependencies": {
