--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "timeengine",
-  "version": "6.5.1",
-  "description": "TimeEngine is a tiny, simple yet versatile library that provides first class reactive value 'over time' with smart dependency resolving capability in JavaScript. Built for a programming paradigm: Dependency driven Functional Reactive Programming (DFRP)",
+  "version": "6.6.0",
+  "description": "TimeEngine is a tiny, simple yet versatile library that provides first class reactive value 'over time' with smart dependency resolving capability in JavaScript. Designed for Declarative and FRP programming.",
   "main": "timeengine.js",
   "scripts": {
     "test": "node test.js",
-    "jsx": "./node_modules/.bin/babel ./react-test/index.jsx -o ./react-test/index.js"
+
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/TimeEngine/timeengine.git"
   },
   "keywords": [
+    "declarative",
     "FRP",
     "functional",
     "reactive",
@@ -30,14 +31,10 @@
   },
   "homepage": "http://timeengine.github.io",
   "devDependencies": {
-    "babel-cli": "^6.9.0",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.5.0",
-    "eslint": "^2.10.2",
-    "eslint-plugin-react": "^5.1.1",
-    "react": "^15.1.0",
-    "react-dom": "^15.1.0",
-    "timeengine-react": "*"
+    "babel-cli": "^6.22.2",
+    "babel-preset-latest": "^6.22.0",
+    "babel-preset-react": "^6.22.0",
+    "eslint": "^3.15.0"
   },
   "dependencies": {
     "immutable": "^3.7.6"
