--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "TimeEngine is a tiny, simple yet versatile library that provides first class reactive value 'over time' with smart dependency resolving capability in JavaScript. Designed for Declarative and FRP programming.",
   "main": "timeengine.js",
   "scripts": {
-    "test": "node test.js",
-
+    "test": "node test.js"
   },
   "repository": {
     "type": "git",
